infra/kubernetes/cluster-01/apps/default/steel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: steel
  namespace: default
spec:
  selector:
    app: steel
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: web
