infra/kubernetes/cluster-01/apps/default/steel/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steel
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - hosts:
        - "steel.${SECRET_DOMAIN}"
      secretName: "steel.${SECRET_DOMAIN}"
  rules:
    - host: "steel.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: steel
                port:
                  name: web
